--- a/MemeThing/Views/AddCaption.storyboard
+++ b/MemeThing/Views/AddCaption.storyboard
@@ -3,6 +3,7 @@
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="Stack View standard spacing" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -16,13 +17,24 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nkK-uE-dFS">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hmp-WS-XX3">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="88"/>
+                                <color key="backgroundColor" name="navBar"/>
+                            </view>
+                            <navigationBar contentMode="scaleToFill" translucent="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nkK-uE-dFS">
                                 <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                                <color key="tintColor" name="purpleAccent"/>
+                                <color key="barTintColor" name="navBar"/>
                                 <items>
                                     <navigationItem id="npf-vo-2v7">
                                         <barButtonItem key="leftBarButtonItem" title="Main Menu" id="LIn-io-HxE">
                                             <connections>
                                                 <action selector="mainMenuButtonTapped:" destination="wv3-dL-fID" id="xfm-2U-ri9"/>
+                                            </connections>
+                                        </barButtonItem>
+                                        <barButtonItem key="rightBarButtonItem" image="ellipsis" catalog="system" id="oKk-L5-sQx">
+                                            <connections>
+                                                <action selector="dotsButtonTapped:" destination="wv3-dL-fID" id="6ML-8J-WZK"/>
                                             </connections>
                                         </barButtonItem>
                                     </navigationItem>
@@ -34,11 +46,14 @@
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="OD7-rI-H93">
                                         <rect key="frame" x="20.5" y="19.5" width="373" height="735"/>
                                         <subviews>
-                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="200" translatesAutoresizingMaskIntoConstraints="NO" id="7IK-AJ-lNo">
-                                                <rect key="frame" x="0.0" y="0.0" width="373" height="627"/>
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="200" translatesAutoresizingMaskIntoConstraints="NO" id="7IK-AJ-lNo" customClass="MemeImageView" customModule="MemeThing" customModuleProvider="target">
+                                                <rect key="frame" x="0.0" y="0.0" width="373" height="621"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" secondItem="7IK-AJ-lNo" secondAttribute="height" multiplier="3:5" id="fHW-u9-qyE"/>
+                                                </constraints>
                                             </imageView>
                                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter funniest caption..." textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="KHy-3E-I4Q">
-                                                <rect key="frame" x="0.0" y="636" width="373" height="40"/>
+                                                <rect key="frame" x="0.0" y="633" width="373" height="40"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="40" id="T14-aV-BZz"/>
                                                 </constraints>
@@ -72,12 +87,15 @@
                             <constraint firstItem="nkK-uE-dFS" firstAttribute="trailing" secondItem="9G1-Tm-2X0" secondAttribute="trailing" id="5SB-46-XB9"/>
                             <constraint firstItem="oqp-zC-yKT" firstAttribute="trailing" secondItem="9G1-Tm-2X0" secondAttribute="trailing" id="6RU-cv-ruF"/>
                             <constraint firstItem="oqp-zC-yKT" firstAttribute="bottom" secondItem="9G1-Tm-2X0" secondAttribute="bottom" id="A5c-17-peN"/>
+                            <constraint firstItem="hmp-WS-XX3" firstAttribute="leading" secondItem="gCh-mx-hlE" secondAttribute="leading" id="Fep-gb-FwP"/>
                             <constraint firstItem="KHy-3E-I4Q" firstAttribute="height" relation="lessThanOrEqual" secondItem="9G1-Tm-2X0" secondAttribute="height" multiplier="0.03" priority="999" id="I3d-Zb-hnc"/>
                             <constraint firstItem="xcm-NG-LHC" firstAttribute="height" relation="lessThanOrEqual" secondItem="9G1-Tm-2X0" secondAttribute="height" multiplier="0.06" priority="999" id="KMI-aD-31n"/>
+                            <constraint firstItem="oqp-zC-yKT" firstAttribute="top" secondItem="hmp-WS-XX3" secondAttribute="bottom" id="Mne-av-eg0"/>
                             <constraint firstItem="oqp-zC-yKT" firstAttribute="leading" secondItem="9G1-Tm-2X0" secondAttribute="leading" id="OYi-cy-iCu"/>
                             <constraint firstItem="nkK-uE-dFS" firstAttribute="top" secondItem="9G1-Tm-2X0" secondAttribute="top" id="PPz-Ku-KyE"/>
+                            <constraint firstItem="9G1-Tm-2X0" firstAttribute="trailing" secondItem="hmp-WS-XX3" secondAttribute="trailing" id="Sot-eF-Nj7"/>
+                            <constraint firstItem="hmp-WS-XX3" firstAttribute="top" secondItem="gCh-mx-hlE" secondAttribute="top" id="YRG-td-oZT"/>
                             <constraint firstItem="nkK-uE-dFS" firstAttribute="leading" secondItem="9G1-Tm-2X0" secondAttribute="leading" id="lbv-kp-mhg"/>
-                            <constraint firstItem="7IK-AJ-lNo" firstAttribute="height" secondItem="gCh-mx-hlE" secondAttribute="height" multiplier="0.7" id="n9Z-qe-ISE"/>
                             <constraint firstItem="oqp-zC-yKT" firstAttribute="top" secondItem="nkK-uE-dFS" secondAttribute="bottom" id="tdQ-xw-Ojx"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="9G1-Tm-2X0"/>
@@ -85,11 +103,26 @@
                     <connections>
                         <outlet property="captionTextField" destination="KHy-3E-I4Q" id="BVi-in-Bts"/>
                         <outlet property="memeImageView" destination="7IK-AJ-lNo" id="IA8-Xi-3a1"/>
+                        <outlet property="navigationBar" destination="nkK-uE-dFS" id="xZp-iN-6xU"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="bXW-Rs-L83" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <tapGestureRecognizer id="fkm-VB-NSO">
+                    <connections>
+                        <action selector="screenTapped:" destination="wv3-dL-fID" id="WZF-dA-brk"/>
+                    </connections>
+                </tapGestureRecognizer>
             </objects>
             <point key="canvasLocation" x="3839.130434782609" y="129.91071428571428"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="ellipsis" catalog="system" width="128" height="37"/>
+        <namedColor name="navBar">
+            <color red="0.94901960784313721" green="0.8666666666666667" blue="0.64313725490196083" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="purpleAccent">
+            <color red="0.25490196078431371" green="0.23529411764705882" blue="0.34509803921568627" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+    </resources>
 </document>
