--- a/MemeThing/Views/MemeThing/Views/MemeThing/Views/Base.lproj/ViewResults.storyboard
+++ b/MemeThing/Views/MemeThing/Views/MemeThing/Views/Base.lproj/ViewResults.storyboard
@@ -3,6 +3,7 @@
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="Stack View standard spacing" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -16,20 +17,27 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qSh-vj-0xP">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="88"/>
+                                <color key="backgroundColor" name="navBar"/>
+                            </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fsD-kw-tCw">
                                 <rect key="frame" x="0.0" y="88" width="414" height="774"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="uSg-JO-mIM">
-                                        <rect key="frame" x="20.5" y="19.5" width="373" height="735"/>
+                                        <rect key="frame" x="41.5" y="38.5" width="331" height="697"/>
                                         <subviews>
-                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="200" translatesAutoresizingMaskIntoConstraints="NO" id="AlU-DO-Xe3">
-                                                <rect key="frame" x="0.0" y="0.0" width="373" height="562.5"/>
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="200" translatesAutoresizingMaskIntoConstraints="NO" id="AlU-DO-Xe3" customClass="MemeImageView" customModule="MemeThing" customModuleProvider="target">
+                                                <rect key="frame" x="0.0" y="0.0" width="331" height="552"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" secondItem="AlU-DO-Xe3" secondAttribute="height" multiplier="3:5" id="JGP-oz-MVx"/>
+                                                </constraints>
                                             </imageView>
                                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" pagingEnabled="YES" showsVerticalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="A8m-FQ-Uba">
-                                                <rect key="frame" x="0.0" y="570.5" width="373" height="81.5"/>
+                                                <rect key="frame" x="0.0" y="560" width="331" height="57.5"/>
                                                 <subviews>
                                                     <view contentMode="scaleToFill" verticalHuggingPriority="249" translatesAutoresizingMaskIntoConstraints="NO" id="Vy5-vx-0oa" userLabel="Content View">
-                                                        <rect key="frame" x="0.0" y="0.0" width="373" height="81.5"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="331" height="57.5"/>
                                                     </view>
                                                 </subviews>
                                                 <constraints>
@@ -41,23 +49,23 @@
                                                 </constraints>
                                             </scrollView>
                                             <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="sAz-qA-P0L">
-                                                <rect key="frame" x="0.0" y="660" width="373" height="37"/>
+                                                <rect key="frame" x="0.0" y="625.5" width="331" height="33.5"/>
                                                 <subviews>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4EB-A1-VVY">
-                                                        <rect key="frame" x="0.0" y="0.0" width="30" height="37"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="30" height="33.5"/>
                                                         <state key="normal" title="&lt;"/>
                                                     </button>
                                                     <pageControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="3" translatesAutoresizingMaskIntoConstraints="NO" id="bLi-Zs-I7l">
-                                                        <rect key="frame" x="167" y="0.0" width="39" height="37"/>
+                                                        <rect key="frame" x="146" y="0.0" width="39" height="33.5"/>
                                                     </pageControl>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7mb-DM-cl2">
-                                                        <rect key="frame" x="343" y="0.0" width="30" height="37"/>
+                                                        <rect key="frame" x="301" y="0.0" width="30" height="33.5"/>
                                                         <state key="normal" title="&gt;"/>
                                                     </button>
                                                 </subviews>
                                             </stackView>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NVX-Za-Jzn" customClass="SubmitButton" customModule="MemeThing" customModuleProvider="target">
-                                                <rect key="frame" x="0.0" y="705" width="373" height="30"/>
+                                                <rect key="frame" x="0.0" y="667" width="331" height="30"/>
                                                 <state key="normal" title="Choose as winner!"/>
                                                 <connections>
                                                     <action selector="chooseWinnerButtonTapped:" destination="OFq-l9-Vna" eventType="touchUpInside" id="xFg-o5-pIR"/>
@@ -74,12 +82,14 @@
                                 <constraints>
                                     <constraint firstItem="uSg-JO-mIM" firstAttribute="centerX" secondItem="fsD-kw-tCw" secondAttribute="centerX" id="0QV-2t-Zcv"/>
                                     <constraint firstItem="uSg-JO-mIM" firstAttribute="centerY" secondItem="fsD-kw-tCw" secondAttribute="centerY" id="5cy-fq-UgQ"/>
-                                    <constraint firstItem="uSg-JO-mIM" firstAttribute="width" secondItem="fsD-kw-tCw" secondAttribute="width" multiplier="0.9" id="MM7-kR-YWB"/>
-                                    <constraint firstItem="uSg-JO-mIM" firstAttribute="height" secondItem="fsD-kw-tCw" secondAttribute="height" multiplier="0.95" id="hc3-Ug-bw6"/>
+                                    <constraint firstItem="uSg-JO-mIM" firstAttribute="width" secondItem="fsD-kw-tCw" secondAttribute="width" multiplier="0.8" id="MM7-kR-YWB"/>
+                                    <constraint firstItem="uSg-JO-mIM" firstAttribute="height" secondItem="fsD-kw-tCw" secondAttribute="height" multiplier="0.9" id="hc3-Ug-bw6"/>
                                 </constraints>
                             </view>
-                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="f0B-nn-3yJ">
+                            <navigationBar contentMode="scaleToFill" translucent="NO" translatesAutoresizingMaskIntoConstraints="NO" id="f0B-nn-3yJ">
                                 <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                                <color key="tintColor" name="purpleAccent"/>
+                                <color key="barTintColor" name="navBar"/>
                                 <items>
                                     <navigationItem id="XPZ-v1-tvU">
                                         <barButtonItem key="leftBarButtonItem" title="Main Menu" id="rWf-Jn-Zc9">
@@ -99,12 +109,16 @@
                         <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="uSg-JO-mIM" firstAttribute="top" relation="greaterThanOrEqual" secondItem="f0B-nn-3yJ" secondAttribute="top" constant="8" id="3JQ-Fk-m7q"/>
+                            <constraint firstItem="qSh-vj-0xP" firstAttribute="top" secondItem="Bo3-Gf-UQy" secondAttribute="top" id="4tj-CC-WHH"/>
                             <constraint firstItem="1UW-qO-BJN" firstAttribute="bottom" secondItem="fsD-kw-tCw" secondAttribute="bottom" id="6Uy-Or-aEz"/>
                             <constraint firstItem="f0B-nn-3yJ" firstAttribute="leading" secondItem="1UW-qO-BJN" secondAttribute="leading" id="8Db-4Q-KjF"/>
+                            <constraint firstItem="fsD-kw-tCw" firstAttribute="top" secondItem="qSh-vj-0xP" secondAttribute="bottom" id="Dw4-7A-1Vq"/>
                             <constraint firstItem="fsD-kw-tCw" firstAttribute="top" secondItem="f0B-nn-3yJ" secondAttribute="bottom" id="H4T-Fv-dPf"/>
-                            <constraint firstItem="Vy5-vx-0oa" firstAttribute="height" secondItem="1UW-qO-BJN" secondAttribute="height" multiplier="0.1" id="jQH-WR-vDJ"/>
+                            <constraint firstItem="1UW-qO-BJN" firstAttribute="trailing" secondItem="qSh-vj-0xP" secondAttribute="trailing" id="Vhy-Yk-gKL"/>
+                            <constraint firstItem="Vy5-vx-0oa" firstAttribute="height" secondItem="1UW-qO-BJN" secondAttribute="height" multiplier="0.07" id="jQH-WR-vDJ"/>
                             <constraint firstItem="fsD-kw-tCw" firstAttribute="trailing" secondItem="1UW-qO-BJN" secondAttribute="trailing" id="mkX-CS-ZVW"/>
                             <constraint firstItem="f0B-nn-3yJ" firstAttribute="trailing" secondItem="1UW-qO-BJN" secondAttribute="trailing" id="rd4-t2-0d8"/>
+                            <constraint firstItem="qSh-vj-0xP" firstAttribute="leading" secondItem="Bo3-Gf-UQy" secondAttribute="leading" id="uVH-gM-jiu"/>
                             <constraint firstItem="fsD-kw-tCw" firstAttribute="leading" secondItem="1UW-qO-BJN" secondAttribute="leading" id="vDF-w9-0xd"/>
                             <constraint firstItem="f0B-nn-3yJ" firstAttribute="top" secondItem="1UW-qO-BJN" secondAttribute="top" id="ztR-NW-odc"/>
                         </constraints>
@@ -113,6 +127,7 @@
                     <connections>
                         <outlet property="chooseWinnerButton" destination="NVX-Za-Jzn" id="95q-2j-jEp"/>
                         <outlet property="memeImageView" destination="AlU-DO-Xe3" id="piz-LP-Eie"/>
+                        <outlet property="navigationBar" destination="f0B-nn-3yJ" id="bSU-r5-FUi"/>
                         <outlet property="pageControl" destination="bLi-Zs-I7l" id="H6d-zu-Gxc"/>
                         <outlet property="scrollView" destination="A8m-FQ-Uba" id="xE4-pa-5kD"/>
                     </connections>
@@ -124,5 +139,11 @@
     </scenes>
     <resources>
         <image name="ellipsis" catalog="system" width="128" height="37"/>
+        <namedColor name="navBar">
+            <color red="0.94901960784313721" green="0.8666666666666667" blue="0.64313725490196083" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="purpleAccent">
+            <color red="0.25490196078431371" green="0.23529411764705882" blue="0.34509803921568627" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
     </resources>
 </document>
