--- a/MemeThing/Views/Waiting.storyboard
+++ b/MemeThing/Views/Waiting.storyboard
@@ -3,6 +3,7 @@
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="Stack View standard spacing" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -16,8 +17,14 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="B3v-Lj-bVa">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2zm-D0-H3U">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="54"/>
+                                <color key="backgroundColor" name="navBar"/>
+                            </view>
+                            <navigationBar contentMode="scaleToFill" translucent="NO" translatesAutoresizingMaskIntoConstraints="NO" id="B3v-Lj-bVa">
                                 <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                                <color key="tintColor" name="purpleAccent"/>
+                                <color key="barTintColor" name="navBar"/>
                                 <items>
                                     <navigationItem id="Tzv-IC-egu">
                                         <barButtonItem key="leftBarButtonItem" title="Main Menu" id="zUb-TL-pjC">
@@ -25,10 +32,15 @@
                                                 <action selector="mainMenuButtonTapped:" destination="WoF-12-8qK" id="vGm-wK-DBa"/>
                                             </connections>
                                         </barButtonItem>
+                                        <barButtonItem key="rightBarButtonItem" image="ellipsis" catalog="system" id="C3T-5N-yno">
+                                            <connections>
+                                                <action selector="dotsButtonTapped:" destination="WoF-12-8qK" id="tHe-1m-HlQ"/>
+                                            </connections>
+                                        </barButtonItem>
                                     </navigationItem>
                                 </items>
                             </navigationBar>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="[waiting label]" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2uS-Iu-RsD" customClass="MemeThingLabel" customModule="MemeThing" customModuleProvider="target">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="[waiting label]" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2uS-Iu-RsD" customClass="MemeThingLabelBackground" customModule="MemeThing" customModuleProvider="target">
                                 <rect key="frame" x="153.5" y="171" width="107.5" height="20.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
@@ -48,19 +60,19 @@
                                                 <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="e5Q-fc-G5e">
                                                     <rect key="frame" x="8.5" y="1" width="314" height="42"/>
                                                     <subviews>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hi6-EF-sZh">
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hi6-EF-sZh" customClass="MemeThingLabel" customModule="MemeThing" customModuleProvider="target">
                                                             <rect key="frame" x="0.0" y="0.0" width="99.5" height="42"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FJ2-vm-LVU">
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FJ2-vm-LVU" customClass="MemeThingLabel" customModule="MemeThing" customModuleProvider="target">
                                                             <rect key="frame" x="107.5" y="0.0" width="99" height="42"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ud2-2U-Cvr">
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ud2-2U-Cvr" customClass="MemeThingLabel" customModule="MemeThing" customModuleProvider="target">
                                                             <rect key="frame" x="214.5" y="0.0" width="99.5" height="42"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                             <nil key="textColor"/>
@@ -86,23 +98,28 @@
                                 </prototypes>
                             </tableView>
                         </subviews>
-                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="2uS-Iu-RsD" firstAttribute="centerX" secondItem="KnZ-49-nEF" secondAttribute="centerX" id="769-XK-xvB"/>
                             <constraint firstItem="B3v-Lj-bVa" firstAttribute="trailing" secondItem="KnZ-49-nEF" secondAttribute="trailing" id="DkW-8E-AYF"/>
+                            <constraint firstItem="2zm-D0-H3U" firstAttribute="top" secondItem="VjZ-lY-irn" secondAttribute="top" id="Efl-st-KFg"/>
+                            <constraint firstItem="KnZ-49-nEF" firstAttribute="trailing" secondItem="2zm-D0-H3U" secondAttribute="trailing" id="SKU-Le-5kW"/>
                             <constraint firstItem="fVo-U2-gzk" firstAttribute="height" secondItem="VjZ-lY-irn" secondAttribute="height" multiplier="0.4" id="UiJ-05-tK6"/>
                             <constraint firstItem="fVo-U2-gzk" firstAttribute="width" secondItem="VjZ-lY-irn" secondAttribute="width" multiplier="0.8" id="gR4-zT-k8F"/>
                             <constraint firstItem="fVo-U2-gzk" firstAttribute="centerY" secondItem="KnZ-49-nEF" secondAttribute="centerY" id="gTI-cS-PDe"/>
                             <constraint firstItem="B3v-Lj-bVa" firstAttribute="top" secondItem="KnZ-49-nEF" secondAttribute="top" id="hPO-6r-y3f"/>
+                            <constraint firstItem="B3v-Lj-bVa" firstAttribute="top" secondItem="2zm-D0-H3U" secondAttribute="bottom" constant="-10" id="ib4-m5-2x8"/>
                             <constraint firstItem="fVo-U2-gzk" firstAttribute="centerX" secondItem="KnZ-49-nEF" secondAttribute="centerX" id="li3-tj-viK"/>
                             <constraint firstItem="fVo-U2-gzk" firstAttribute="top" relation="greaterThanOrEqual" secondItem="2uS-Iu-RsD" secondAttribute="bottom" constant="40" id="mhM-Gx-RZ0"/>
                             <constraint firstItem="B3v-Lj-bVa" firstAttribute="leading" secondItem="KnZ-49-nEF" secondAttribute="leading" id="pwu-aJ-mCi"/>
                             <constraint firstItem="2uS-Iu-RsD" firstAttribute="centerY" secondItem="KnZ-49-nEF" secondAttribute="centerY" multiplier="0.4" priority="999" id="pz8-kn-4cF"/>
                             <constraint firstItem="2uS-Iu-RsD" firstAttribute="width" relation="lessThanOrEqual" secondItem="fVo-U2-gzk" secondAttribute="width" id="rjh-a0-QfO"/>
+                            <constraint firstItem="2zm-D0-H3U" firstAttribute="leading" secondItem="VjZ-lY-irn" secondAttribute="leading" id="u0u-Mf-Yzf"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="KnZ-49-nEF"/>
                     </view>
                     <connections>
+                        <outlet property="navigationBar" destination="B3v-Lj-bVa" id="bxU-T9-enU"/>
                         <outlet property="waitingForTableView" destination="fVo-U2-gzk" id="hIV-3Z-R3n"/>
                         <outlet property="waitingLabel" destination="2uS-Iu-RsD" id="Lc6-T5-lgb"/>
                     </connections>
@@ -112,4 +129,13 @@
             <point key="canvasLocation" x="140.57971014492756" y="112.5"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="ellipsis" catalog="system" width="128" height="37"/>
+        <namedColor name="navBar">
+            <color red="0.94901960784313721" green="0.8666666666666667" blue="0.64313725490196083" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="purpleAccent">
+            <color red="0.25490196078431371" green="0.23529411764705882" blue="0.34509803921568627" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+    </resources>
 </document>
